fixed overflow (space on side) issue in styles.css

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,8 @@
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
